--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>hello world</title>
     </head>
     <body>
-        <p>hello world</p>
+        <h1>hello world</h1>
     </body>
 </html>
